--- a/test_nb.ipynb
+++ b/test_nb.ipynb
@@ -23,17 +23,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -55,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,21 +70,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "Index(['Lost', 'Won'], dtype='object')"
-      ]
+       "      matches_played  matches_won  matches_lost  win_rate\n",
+       "year                                                     \n",
+       "2000              57           30            27  0.526316\n",
+       "2001              66           46            20  0.696970\n",
+       "2002              78           55            23  0.705128\n",
+       "2003              82           68            14  0.829268\n",
+       "2004              74           69             5  0.932432\n",
+       "2005              84           80             4  0.952381\n",
+       "2006              95           90             5  0.947368\n",
+       "2007              75           66             9  0.880000\n",
+       "2008              80           65            15  0.812500\n",
+       "2009              71           59            12  0.830986\n",
+       "2010              78           65            13  0.833333\n",
+       "2011              73           61            12  0.835616\n",
+       "2012              80           69            11  0.862500\n",
+       "2013              66           48            18  0.727273\n",
+       "2014              74           64            10  0.864865\n",
+       "2015              72           61            11  0.847222\n",
+       "2016              28           21             7  0.750000\n",
+       "2017              57           52             5  0.912281\n",
+       "2018              58           48            10  0.827586\n",
+       "2019              61           51            10  0.836066\n",
+       "2020               6            5             1  0.833333"
+      ],
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>matches_played</th>\n      <th>matches_won</th>\n      <th>matches_lost</th>\n      <th>win_rate</th>\n    </tr>\n    <tr>\n      <th>year</th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>2000</th>\n      <td>57</td>\n      <td>30</td>\n      <td>27</td>\n      <td>0.526316</td>\n    </tr>\n    <tr>\n      <th>2001</th>\n      <td>66</td>\n      <td>46</td>\n      <td>20</td>\n      <td>0.696970</td>\n    </tr>\n    <tr>\n      <th>2002</th>\n      <td>78</td>\n      <td>55</td>\n      <td>23</td>\n      <td>0.705128</td>\n    </tr>\n    <tr>\n      <th>2003</th>\n      <td>82</td>\n      <td>68</td>\n      <td>14</td>\n      <td>0.829268</td>\n    </tr>\n    <tr>\n      <th>2004</th>\n      <td>74</td>\n      <td>69</td>\n      <td>5</td>\n      <td>0.932432</td>\n    </tr>\n    <tr>\n      <th>2005</th>\n      <td>84</td>\n      <td>80</td>\n      <td>4</td>\n      <td>0.952381</td>\n    </tr>\n    <tr>\n      <th>2006</th>\n      <td>95</td>\n      <td>90</td>\n      <td>5</td>\n      <td>0.947368</td>\n    </tr>\n    <tr>\n      <th>2007</th>\n      <td>75</td>\n      <td>66</td>\n      <td>9</td>\n      <td>0.880000</td>\n    </tr>\n    <tr>\n      <th>2008</th>\n      <td>80</td>\n      <td>65</td>\n      <td>15</td>\n      <td>0.812500</td>\n    </tr>\n    <tr>\n      <th>2009</th>\n      <td>71</td>\n      <td>59</td>\n      <td>12</td>\n      <td>0.830986</td>\n    </tr>\n    <tr>\n      <th>2010</th>\n      <td>78</td>\n      <td>65</td>\n      <td>13</td>\n      <td>0.833333</td>\n    </tr>\n    <tr>\n      <th>2011</th>\n      <td>73</td>\n      <td>61</td>\n      <td>12</td>\n      <td>0.835616</td>\n    </tr>\n    <tr>\n      <th>2012</th>\n      <td>80</td>\n      <td>69</td>\n      <td>11</td>\n      <td>0.862500</td>\n    </tr>\n    <tr>\n      <th>2013</th>\n      <td>66</td>\n      <td>48</td>\n      <td>18</td>\n      <td>0.727273</td>\n    </tr>\n    <tr>\n      <th>2014</th>\n      <td>74</td>\n      <td>64</td>\n      <td>10</td>\n      <td>0.864865</td>\n    </tr>\n    <tr>\n      <th>2015</th>\n      <td>72</td>\n      <td>61</td>\n      <td>11</td>\n      <td>0.847222</td>\n    </tr>\n    <tr>\n      <th>2016</th>\n      <td>28</td>\n      <td>21</td>\n      <td>7</td>\n      <td>0.750000</td>\n    </tr>\n    <tr>\n      <th>2017</th>\n      <td>57</td>\n      <td>52</td>\n      <td>5</td>\n      <td>0.912281</td>\n    </tr>\n    <tr>\n      <th>2018</th>\n      <td>58</td>\n      <td>48</td>\n      <td>10</td>\n      <td>0.827586</td>\n    </tr>\n    <tr>\n      <th>2019</th>\n      <td>61</td>\n      <td>51</td>\n      <td>10</td>\n      <td>0.836066</td>\n    </tr>\n    <tr>\n      <th>2020</th>\n      <td>6</td>\n      <td>5</td>\n      <td>1</td>\n      <td>0.833333</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
      "metadata": {},
-     "execution_count": 22
+     "execution_count": 4
     }
    ],
-   "source": []
+   "source": [
+    "tp.yearly_wr"
+   ]
   },
   {
    "cell_type": "code",
