--- a/test_nb.ipynb
+++ b/test_nb.ipynb
@@ -15,7 +15,8 @@
   "orig_nbformat": 2,
   "kernelspec": {
    "name": "python3",
-   "display_name": "Python 3"
+   "display_name": "Python 3",
+   "language": "python"
   }
  },
  "nbformat": 4,
@@ -88,24 +89,93 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "'/home/fbruzzesi/projects/tennis_analytics'"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 8
+    }
+   ],
+   "source": [
+    "import os \n"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "[{'label': 'Final', 'value': 'F'},\n",
+       " {'label': 'Semifinal', 'value': 'SF'},\n",
+       " {'label': 'Quarterfinal', 'value': 'QF'},\n",
+       " {'label': 'R16', 'value': 'R16'},\n",
+       " {'label': 'R32', 'value': 'R32'},\n",
+       " {'label': 'R64', 'value': 'R64'},\n",
+       " {'label': 'R128', 'value': 'R128'},\n",
+       " {'label': 'Q1', 'value': 'Q1'},\n",
+       " {'label': 'Q2', 'value': 'Q2'},\n",
+       " {'label': 'Q3', 'value': 'Q3'},\n",
+       " {'label': 'RoundRobin', 'value': 'RR'}]"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 22
+    }
+   ],
+   "source": [
+    "import yaml# import load, Loader, dump, Dumper\n",
+    "\n",
+    "with open(os.getcwd() + '/config.yaml') as file:\n",
+    "    # The FullLoader parameter handles the conversion from YAML\n",
+    "    # scalar values to Python the dictionary format\n",
+    "    data = yaml.load(file, Loader=yaml.Loader)\n",
+    "\n",
+    "data['rounds']"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "['app.py',\n",
+       " 'data',\n",
+       " '.gitignore',\n",
+       " 'views',\n",
+       " 'LICENSE',\n",
+       " 'README.md',\n",
+       " 'getdata.py',\n",
+       " '.git',\n",
+       " 'tennis_utils',\n",
+       " 'test_nb.ipynb',\n",
+       " '.vscode',\n",
+       " 'heroku_guide.md',\n",
+       " 'TODO.md',\n",
+       " '__init__.py']"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 12
+    }
+   ],
+   "source": [
+    "os.listdir()"
+   ]
   },
   {
    "cell_type": "code",
