--- a/test_nb.ipynb
+++ b/test_nb.ipynb
@@ -24,14 +24,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n  %reload_ext autoreload\n"
+     "output_type": "error",
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'tennis_utils.scrapers'",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-23-3a7ce3446897>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     16\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     17\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mtennis_utils\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mplayer\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mTennisDataLoader\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mTennisPlayerDataLoader\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mTennisPlayer\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mTennisPlayerRenderer\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 18\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mtennis_utils\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mscrapers\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mSackmanScraper\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     19\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     20\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'tennis_utils.scrapers'"
      ]
     }
    ],
@@ -63,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,50 +93,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "'/home/fbruzzesi/projects/tennis_analytics'"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 8
-    }
-   ],
-   "source": [
-    "import os \n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "[{'label': 'Final', 'value': 'F'},\n",
-       " {'label': 'Semifinal', 'value': 'SF'},\n",
-       " {'label': 'Quarterfinal', 'value': 'QF'},\n",
-       " {'label': 'R16', 'value': 'R16'},\n",
-       " {'label': 'R32', 'value': 'R32'},\n",
-       " {'label': 'R64', 'value': 'R64'},\n",
-       " {'label': 'R128', 'value': 'R128'},\n",
-       " {'label': 'Q1', 'value': 'Q1'},\n",
-       " {'label': 'Q2', 'value': 'Q2'},\n",
-       " {'label': 'Q3', 'value': 'Q3'},\n",
-       " {'label': 'RoundRobin', 'value': 'RR'}]"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 22
-    }
-   ],
+   "outputs": [],
    "source": [
     "import yaml# import load, Loader, dump, Dumper\n",
     "\n",
@@ -141,40 +104,7 @@
     "    # scalar values to Python the dictionary format\n",
     "    data = yaml.load(file, Loader=yaml.Loader)\n",
     "\n",
-    "data['rounds']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "['app.py',\n",
-       " 'data',\n",
-       " '.gitignore',\n",
-       " 'views',\n",
-       " 'LICENSE',\n",
-       " 'README.md',\n",
-       " 'getdata.py',\n",
-       " '.git',\n",
-       " 'tennis_utils',\n",
-       " 'test_nb.ipynb',\n",
-       " '.vscode',\n",
-       " 'heroku_guide.md',\n",
-       " 'TODO.md',\n",
-       " '__init__.py']"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 12
-    }
-   ],
-   "source": [
-    "os.listdir()"
+    "details_mapping = data['details_mapping']"
    ]
   },
   {
@@ -200,6 +130,13 @@
     "https://www.ucl.ac.uk/english-usage/staff/sean/resources/binomialpoisson.pdf\n",
     "\"\"\""
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ]
 }
